# nFactorial-AI-Cup-2025

./: .gitignore  README.md  flake.nix  index.html  tailwind.config.ts
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: assistant.py  health.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: base_class.py  session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: orchestrator.py
backend/app/workers/: doqkz_browser_worker.py  medical_document_analyzer.py  openai_worker.py
src/: App.css  App.tsx  index.css
src/components/: AIActionComponent.tsx  AppointmentCard.tsx  AppointmentsHeader.tsx  AppointmentsList.tsx  BottomNavigation.tsx  CategoriesGrid.tsx  ConversationScreen.tsx  FloatingAIButton.tsx  Header.tsx  HealthHeader.tsx  StatsCards.tsx  UnifiedHeader.tsx  VoiceAssistantInterface.tsx  VoiceInterface.tsx
src/components/appointment/: AppointmentActionButtons.tsx  AppointmentHeader.tsx  AppointmentInfoCard.tsx  AppointmentNotesSection.tsx  AppointmentReviewSection.tsx
src/components/assistant/: ItemHeader.tsx  ItemInfoCard.tsx  ItemNotesSection.tsx  QuickActionsGrid.tsx  ReminderEditForm.tsx
src/pages/: Alerts.tsx  AppointmentDetail.tsx  Appointments.tsx  AssistantItemDetail.tsx  Category.tsx  DoctorProfile.tsx  DocumentScanner.tsx  FindDoctor.tsx  ForgotPassword.tsx  HealthDashboard.tsx  Index.tsx  Login.tsx  Profile.tsx  Reminders.tsx  ResetPassword.tsx  Signup.tsx  VoiceAssistant.tsx
(+10 files in other folders)
